--- a/environment.yml
+++ b/environment.yml
@@ -25,6 +25,7 @@ dependencies:
   - tzdata=2022f=h191b570_0
   - urllib3=1.26.13=pyhd8ed1ab_0
   - wheel=0.38.4=pyhd8ed1ab_0
+  - tianshou
   - pip:
     - libopenblas==0.3.21
     - python==3.10.8
